src/objects/SPIFF_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Minimum__c</fullName>
        <formula>SPIFF_Reference__r.Opportunity_Stage_Minimum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage (Minimum)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_short__c</fullName>
        <formula>Opportunity__r.OSS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage (short)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_2_Ref__c</fullName>
        <formula>TEXT(SPIFF_Reference__r.Opportunity_Type_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type (2) (Ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_Ref__c</fullName>
        <formula>TEXT(SPIFF_Reference__r.Opportunity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type (1) (Ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For system functionality.</inlineHelpText>
        <label>Opportunity Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SPIFF Claims</relationshipLabel>
        <relationshipName>SPIFF_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oppty_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Evaluation_Result_Reason__c</fullName>
        <label>Override Evaluation Result - Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Evaluation_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Evaluation Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_0__c</fullName>
        <formula>SPIFF_Reference__r.Payout_Amount_Range_0__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount (Range 0)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_1__c</fullName>
        <formula>SPIFF_Reference__r.Payout_Amount_Range_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount (Range 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_Range_2__c</fullName>
        <formula>SPIFF_Reference__r.Payout_Amount_Range_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount (Range 2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount__c</fullName>
        <formula>IF( OR(RecordType.Name = &quot;Incentive Claim Form Rev-1&quot;, RecordType.Name = &quot;Incentive Claim Form Rev-4&quot;),
IF( ISPICKVAL(Internal_Status__c , &quot;Resolved&quot;),
IF( Opportunity_Amount__c &gt;= Opportunity_Amount_Ref__c, Payout_Amount_over__c, Payout_Amount_under__c),
0),

IF( RecordType.Name = &quot;Incentive Claim Form Rev-3&quot;,
IF( ISPICKVAL(Internal_Status__c , &quot;Resolved&quot;),
IF(Amount_Hardware__c &gt;= 150000, 
    IF(Amount_Hardware__c&gt;= 250000,
       Payout_Amount_Range_2__c,
       Payout_Amount_Range_1__c),
    0
),
0),
0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_over__c</fullName>
        <formula>SPIFF_Reference__r.Payout_Amount_over__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount (over)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Amount_under__c</fullName>
        <formula>SPIFF_Reference__r.Payout_Amount_under__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount (under)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferred_Gift__c</fullName>
        <inlineHelpText>Relevant only for specific SPIFF Programs.</inlineHelpText>
        <label>Preferred Gift</label>
        <picklist>
            <picklistValues>
                <fullName>Visa E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Buy E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darden Restaurants E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll cash disbursement  (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa E-gift card (USD 400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines E-gift card (USD 400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll cash disbursement (USD 400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines e-Gift Card (USD 350)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Airlines e-Gift Card (USD 350)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For system functionality.</inlineHelpText>
        <label>Reference Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reseller_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPIFF Claims (Reseller Account)</relationshipLabel>
        <relationshipName>SPIFF_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller_Account_f__c</fullName>
        <formula>Opportunity__r.Reseller_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Account (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Company_webform__c</fullName>
        <label>Reseller Company (webform)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Rep_Email_webform__c</fullName>
        <label>Reseller Rep Email (webform)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reseller_Rep_Name_webform__c</fullName>
        <label>Reseller Rep Name (webform)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_SE_Email_webform__c</fullName>
        <label>Reseller SE Email (webform)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reseller_SE_Name_webform__c</fullName>
        <label>Reseller SE Name (webform)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIFF_Program_Name__c</fullName>
        <formula>SPIFF_Reference__r.SPIFF_Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPIFF Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIFF_Reference_Status__c</fullName>
        <formula>TEXT(SPIFF_Reference__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPIFF Reference Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIFF_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPIFF Reference</label>
        <referenceTo>SPFRef__c</referenceTo>
        <relationshipLabel>SPIFF Claims</relationshipLabel>
        <relationshipName>SPIFF_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <formula>TEXT( Opportunity__r.Sales_Area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>TEXT( Opportunity__r.Sales_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Form_URL__c</fullName>
        <label>Submission Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_Diff_First_Mtg_Date_vs_Qual__c</fullName>
        <formula>IF( First_Meeting_Date__c &lt;  First_Meeting_Qual_Date__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Diff First Mtg Date vs Qual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_num_days__c</fullName>
        <formula>First_Meeting_Date__c -  CH_Reg_Submit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test num days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tickle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_SPIFF_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update SPIFF Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delme_Eval_Oppty_Owner_del__c</fullName>
        <formula>IF( delme_Opportunity_Owner_del__c =  delme_Opportunity_Owner_ref_del__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>delme Eval Oppty Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delme_Opportunity_Owner_del__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>delme Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delme_Opportunity_Owner_ref_del__c</fullName>
        <formula>SPIFF_Reference__r.delme_Opportunity_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>delme Opportunity Owner (ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delme_Test_Eval_Oppty_Owner__c</fullName>
        <label>delme Test Eval Oppty Owner</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SPIFF Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Evaluation_Result_old__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Processed_SPIFF_Claims</fullName>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Rep_Email_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Override_Evaluation_Result__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Processed SPIFF Claims</label>
    </listViews>
    <listViews>
        <fullName>All_SPIFF_Claims</fullName>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>NAME</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Override_Evaluation_Result__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All SPIFF Claims</label>
    </listViews>
    <listViews>
        <fullName>Appointments_Q3FY15_G5000</fullName>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>contains</operation>
            <value>Submitted,Pending,Approved,Gift Sent,Disqualified,Duplicate (Notified),Dup</value>
        </filters>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>contains</operation>
            <value>G5000</value>
        </filters>
        <label>Appointments Q3FY15 G5000</label>
    </listViews>
    <listViews>
        <fullName>Avnet</fullName>
        <columns>NAME</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Claim_Processed__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>contains</operation>
            <value>avnet</value>
        </filters>
        <label>Avnet</label>
    </listViews>
    <listViews>
        <fullName>Claims_Needing_Processing</fullName>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Preferred_Gift__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Gift Sent,Disqualified,Duplicate (Notified),Duplicate</value>
        </filters>
        <label>Claims Needing Processing</label>
    </listViews>
    <listViews>
        <fullName>Claims_Needing_Processing_Large_Deal</fullName>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Gift Sent,Disqualified,Duplicate (Notified),Duplicate</value>
        </filters>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>contains</operation>
            <value>Large Deal</value>
        </filters>
        <label>Claims Needing Processing - Large Deal</label>
    </listViews>
    <listViews>
        <fullName>Claims_Needing_Processing_Q3FY2015</fullName>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>equals</operation>
            <value>Q3 FY15 Appointment Setting</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Duplicate (Notified)</value>
        </filters>
        <label>Claims Needing ProcessingQ3FY2015</label>
    </listViews>
    <listViews>
        <fullName>Claims_by_Nimble_Rep</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Reseller_Rep_Email_webform__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Claims by Nimble Rep</label>
    </listViews>
    <listViews>
        <fullName>Disqualify</fullName>
        <columns>NAME</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>SPIFF_Reference__c</columns>
        <columns>SPIFF_Program_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Evaluation_Result_old__c</field>
            <operation>equals</operation>
            <value>Disqualify</value>
        </filters>
        <label>Disqualify</label>
    </listViews>
    <listViews>
        <fullName>Eval_Claim_Submit_Date</fullName>
        <columns>Manual_Update__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Create_Date_shadow__c</columns>
        <columns>Eval_Claim_Submission_Date__c</columns>
        <columns>NAME</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Override_Evaluation_Result__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Eval Claim Submit Date</label>
    </listViews>
    <listViews>
        <fullName>NA_Approved_SPIFF_Claims</fullName>
        <columns>NAME</columns>
        <columns>Sales_Area__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Claim_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Area__c</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Evaluation_Result_old__c</field>
            <operation>equals</operation>
            <value>Approve</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Reseller_Company_webform__c</field>
            <operation>notContain</operation>
            <value>cdw</value>
        </filters>
        <label>NA Approved SPIFF Claims</label>
    </listViews>
    <listViews>
        <fullName>Pending_Duplicate</fullName>
        <columns>Sales_Area__c</columns>
        <columns>NAME</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Override_Evaluation_Result__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Evaluation_Result_old__c</field>
            <operation>equals</operation>
            <value>Review - Duplicate</value>
        </filters>
        <label>Pending - Duplicate</label>
    </listViews>
    <listViews>
        <fullName>Q2Q3_FY15_Large_Deal</fullName>
        <columns>NAME</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Claim_Processed__c</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>SPIFF_Program_Name__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>contains</operation>
            <value>large deal</value>
        </filters>
        <label>Q2Q3 FY15 Large Deal</label>
    </listViews>
    <listViews>
        <fullName>Q2_All_SPIFF_Claims</fullName>
        <columns>NAME</columns>
        <columns>Deal_Registration_ID_webform__c</columns>
        <columns>Lead_ID__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Internal_Status__c</columns>
        <columns>Evaluation_Result__c</columns>
        <columns>Duplicate_Info__c</columns>
        <columns>Reseller_Rep_Name_webform__c</columns>
        <columns>Reseller_Company_webform__c</columns>
        <columns>Customer_Name_webform__c</columns>
        <columns>Override_Evaluation_Result__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPIFF_Reference__c</field>
            <operation>equals</operation>
            <value>SPFR-0147</value>
        </filters>
        <filters>
            <field>SPIFF_Program_Name__c</field>
            <operation>equals</operation>
            <value>Q2 FY15 Appointment Setting</value>
        </filters>
        <label>Q2 - All SPIFF Claims</label>
    </listViews>
    <nameField>
        <displayFormat>SPIFF-{0000000}</displayFormat>
        <label>SPIFF Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPIFF Claims</pluralLabel>
    <recordTypes>
        <fullName>Incentive_Claim_Form_Rev_1</fullName>
        <active>true</active>
        <label>Incentive Claim Form Rev-1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_Claim_Form_Rev_2</fullName>
        <active>true</active>
        <label>Incentive Claim Form Rev-2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_Claim_Form_Rev_3</fullName>
        <active>true</active>
        <description>AE and SE. Opportunity Hardware Amount</description>
        <label>Incentive Claim Form Rev-3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_Claim_Form_Rev_4</fullName>
        <active>true</active>
        <description>AE and SE; Opportunity Total Amount</description>
        <label>Incentive Claim Form Rev-4</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_Allow_selecting_different_gift</fullName>
        <active>false</active>
        <description>Do not Allow_selecting_different_gift unless checkbox set.</description>
        <errorConditionFormula>AND(!ISBLANK(TEXT(Gift__c)),
TEXT(Preferred_Gift__c) &lt;&gt; TEXT(Gift__c),
!Allow_selecting_different_gift__c)</errorConditionFormula>
        <errorDisplayField>Allow_selecting_different_gift__c</errorDisplayField>
        <errorMessage>The Gift selected is different from the Preferred Gift. If you would like to proceed with the different gift, check the &quot;Allow_selecting_different_gift&quot; box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_Preferred_Gift</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISPICKVAL(Preferred_Gift__c,&quot;&quot;),
 SPIFF_Program_Name__c &lt;&gt; &quot;Q3 FY15 Appointment Setting&quot;, SPIFF_Program_Name__c &lt;&gt; &quot;Q2 FY16 Appointment Setting&quot;
)</errorConditionFormula>
        <errorDisplayField>Preferred_Gift__c</errorDisplayField>
        <errorMessage>Preferred Gift is not an option for this SPIFF Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Conscious_Override_of_Evaluation_R</fullName>
        <active>true</active>
        <description>Before Approving a Claim with Evaluation Result not &quot;Approve&quot;, you must set the &quot;Override Evaluation Result&quot; checkbox.</description>
        <errorConditionFormula>AND(  
     Override_Evaluation_Result__c = FALSE,
    Evaluation_Result__c != &quot;Approve&quot;,
    ISPICKVAL(Claim_Status__c, &quot;Approved&quot;)  
)</errorConditionFormula>
        <errorDisplayField>Override_Evaluation_Result__c</errorDisplayField>
        <errorMessage>Before Approving a Claim with Evaluation Result not being &quot;Approve&quot;, you must set the &quot;Override Evaluation Result&quot; checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Gift_Card_Number</fullName>
        <active>true</active>
        <description>Before Approving, for Gifts Delivered by Email, you must set the Gift Card Number.</description>
        <errorConditionFormula>AND(  
ISPICKVAL(  Gift_Delivery__c ,&quot;Email&quot;),
ISBLANK(Gift_Card_Number__c  ),
ISPICKVAL(Claim_Status__c, &quot;Approved&quot;)  
)</errorConditionFormula>
        <errorDisplayField>Gift_Card_Number__c</errorDisplayField>
        <errorMessage>Before Approving, for Gifts Delivered by Email, you must set the Gift Card Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Gift_Value</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK( Gift_Value__c ), ISPICKVAL( Gift_Delivery__c , &quot;Tangible&quot;)  )</errorConditionFormula>
        <errorDisplayField>Gift_Value__c</errorDisplayField>
        <errorMessage>For Tangible gifts, you must manually set the Gift Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Gift_information</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Gift__c, &quot;&quot; ), 
ISPICKVAL(Claim_Status__c, &quot;Approved&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Gift__c</errorDisplayField>
        <errorMessage>Before Approving, you must set the Gift information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_No_Gift_Card_Number</fullName>
        <active>true</active>
        <description>Gift Card Number should not be set for Tangible / Via Reseller Payroll Gifts.</description>
        <errorConditionFormula>AND(  
OR(ISPICKVAL( Gift_Delivery__c  ,&quot;Tangible&quot;),ISPICKVAL( Gift_Delivery__c  ,&quot;Via Reseller Payroll&quot;)),
Gift_Card_Number__c &lt;&gt; &quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>Gift_Card_Number__c</errorDisplayField>
        <errorMessage>Gift Card Number should not be set for Tangible or Via Reseller Payroll Gifts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Override_Evaluation_Result_Reason</fullName>
        <active>true</active>
        <description>For Override_Evaluation_Result = TRUE, Please specify the Reason for overriding the Evaluation Result.</description>
        <errorConditionFormula>AND(
    Override_Evaluation_Result__c = TRUE,
    ISBLANK( Override_Evaluation_Result_Reason__c )
)</errorConditionFormula>
        <errorDisplayField>Override_Evaluation_Result_Reason__c</errorDisplayField>
        <errorMessage>Please specify the Reason for overriding the Evaluation Result.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Claim_Status_to_Disqualified_if_Dup</fullName>
        <active>true</active>
        <description>Do not allow setting of Claim Status to Disqualified if Claim is Duplicate.</description>
        <errorConditionFormula>ISCHANGED( Claim_Status__c )  &amp;&amp; ( ISPICKVAL( Claim_Status__c , &quot;Disqualified&quot;) &amp;&amp;  Evaluation_Result_old__c  = &quot;Review - Duplicate&quot; )</errorConditionFormula>
        <errorDisplayField>Claim_Status__c</errorDisplayField>
        <errorMessage>You may not set the Claim Status to &quot;Disqualified&quot; if the Claim is a Duplicate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Clearing_Override_Result_if_Gift_Sent</fullName>
        <active>true</active>
        <description>Do not allow clearing the Override Evaluation Result checkbox, if Claim Status = Gift Sent.</description>
        <errorConditionFormula>AND(
Override_Evaluation_Result__c = FALSE,
ISPICKVAL( Claim_Status__c , &quot;Gift Sent&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Override_Evaluation_Result__c</errorDisplayField>
        <errorMessage>You may not clear the Override Evaluation Result checkbox, if Claim Status = Gift Sent.</errorMessage>
    </validationRules>
</CustomObject>